# ThesisCode

./: .gitignore
combined_launch/: package.xml
combined_launch/launch/: full_system.launch.py  operator_system_V2.launch.py  robot_system_V2.launch.py
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/src/: control_dual_sense.cpp  control_dual_sense_250609.cpp  hello_moveit.cpp  prueba_moveit.cpp  try_moveit.cpp  world_pointcloud.cpp
mi_octomap/src/: cube_intersection_backup250611.cpp  cube_intersection_last.cpp  cube_intersection_proces.cpp  paralelepipedo_interseccion Concontrol.py  paralelepipedo_interseccion.py  paralelepipedo_interseccionBackUp2.py  paralelepipedo_interseccion_250507.py  triggers_set.py  triggers_set_Backup.py
src/combined_launch/: setup.py
src/combined_launch/launch/: full_system.launch_Last.py  start_position.launch.py
src/hello_moveit/src/: bye_moveit.cpp  control_dual_sense_Backup.cpp  detector_node.cpp  dual_sense_teleop.py  invocador_node.cpp  save_node.cpp  save_node_backup.cpp
src/mi_octomap/: CMakeLists.txt  package.xml
src/mi_octomap/launch/: mi_octomap_rviz.launch.py
src/mi_octomap/src/: paralelepipedo_interseccionBackUp.py  paralelepipedo_interseccionBackupReceptor.py  paralelepipedo_interseccionFunciona1.py  paralelepipedo_interseccion_250505.py  shape_detector_node.cpp  triggers_set.py
